tweaks so that cmake actual generates build files

--- a/EASy68Ksource/CMakeLists.txt
+++ b/EASy68Ksource/CMakeLists.txt
@@ -1,8 +1,7 @@
-include_directories(EASy68K_Helpv5.16.1)
-include_directories(EASyBINv2.4.0)
-include_directories(Edit68Kv5.16.1)
-include_directories(Edit68Kv5.16.1/RichEditPlus)
-include_directories(Sim68Kv5.16.1)
+add_subdirectory(EASy68K_Helpv5.16.1)
+add_subdirectory(EASyBINv2.4.0)
+add_subdirectory(Edit68Kv5.16.1)
+add_subdirectory(Sim68Kv5.16.1)
 
-add_executable(EASy68K
-        dsound.h)
+#add_executable(EASy68K
+#        dsound.h)
