--- a/EASy68Ksource/Edit68Kv5.16.1/CMakeLists.txt
+++ b/EASy68Ksource/Edit68Kv5.16.1/CMakeLists.txt
@@ -1,59 +1,58 @@
+add_subdirectory(RichEditPlus)
 add_executable(Edit68K
-        ichEditPlus/dclRichEditPlus.cpp
-        ichEditPlus/RichEditPlus.cpp
-        ichEditPlus/RichEditPlus.h
-        boutS.cpp
-        boutS.h
-        sm.h
-        SSEMBLE.CPP
-        ssembleS.cpp
-        ssembleS.h
-        INFILE.CPP
-        UILD.CPP
-        hksaveS.cpp
-        hksaveS.h
-        ODEGEN.CPP
-        Project.h
-        IRECTIV.CPP
-        DIT68K.cpp
-        ditorOptions.cpp
-        ditorOptions.h
-        RROR.CPP
-        VAL.CPP
-        z68k.h
-        indDialogS.cpp
-        indDialogS.h
-        ontForm1.cpp
-        ontForm1.h
-        LOBALS.CPP
-        elp.cpp
-        elp.h
-        TMLhelp.h
-        NSTLOOK.CPP
-        NSTTABL.CPP
-        ISTING.CPP
-        istS.cpp
-        istS.h
-        ACRO.CPP
-        ainS.cpp
-        ainS.h
-        OVEM.CPP
-        ewhelpS.h
-        BJECT.CPP
-        PPARSE.CPP
-        ptionsS.cpp
-        ptionsS.h
-        review.h
-        review_dlg.h
-        roto.h
-        eplaceDialogS.cpp
-        eplaceDialogS.h
-        TRUCTURED.CPP
-        YMBOL.CPP
-        extS.cpp
-        extS.h
-        ndo.cpp
-        ndo.h
-        til.cpp
-        til.h
+        ASSEMBLE.CPP
+        BINFILE.CPP
+        BUILD.CPP
+        CODEGEN.CPP
+        CProject.h
+        DIRECTIV.CPP
+        EDIT68K.cpp
+        ERROR.CPP
+        EVAL.CPP
+        GLOBALS.CPP
+        HTMLhelp.h
+        INSTLOOK.CPP
+        INSTTABL.CPP
+        LISTING.CPP
+        MACRO.CPP
+        MOVEM.CPP
+        OBJECT.CPP
+        OPPARSE.CPP
+        Preview_dlg.h
+        STRUCTURED.CPP
+        SYMBOL.CPP
+        aboutS.cpp
+        aboutS.h
+        asm.h
+        assembleS.cpp
+        assembleS.h
+        chksaveS.cpp
+        chksaveS.h
+        editorOptions.cpp
+        editorOptions.h
+        ez68k.h
+        findDialogS.cpp
+        findDialogS.h
+        fontForm1.cpp
+        fontForm1.h
+        help.cpp
+        help.h
+        listS.cpp
+        listS.h
+        mainS.cpp
+        mainS.h
+        newhelpS.h
+        optionsS.cpp
+        optionsS.h
+        preview.h
+        proto.h
+        replaceDialogS.cpp
+        replaceDialogS.h
+        textS.cpp
+        textS.h
+        undo.cpp
+        undo.h
+        util.cpp
+        util.h
         )
+
