--- a/EASy68Ksource/EASyBINv2.4.0/CMakeLists.txt
+++ b/EASy68Ksource/EASyBINv2.4.0/CMakeLists.txt
@@ -1,12 +1,12 @@
-add_executable( EasyBIN
-        aboutS.cpp
+add_library( EasyBIN
+        #aboutS.cpp
         aboutS.h
         def.h
-        EASyBIN.cpp
+        #EASyBIN.cpp
         ez68k.h
-        fileIO.cpp
+        #fileIO.cpp
         fileIO.h
-        Form1u.cpp
+        #Form1u.cpp
         Form1u.h
         help.cpp
         help.h
